sorting issues with the gallery load more functionality and alignment

--- a/static/rca/site/assets/css/modules-desktop-small.less
+++ b/static/rca/site/assets/css/modules-desktop-small.less
@@ -36,7 +36,7 @@
  * Contact
  */
 
- 
+
 /**
  * $Carousel
  */
@@ -47,7 +47,7 @@
     .bx-next, .bx-prev {
         .transition(opacity 0.3s ease);
         opacity:0
-    } 
+    }
     &:hover {
         .bx-next, .bx-prev {
             opacity: 1;
@@ -101,6 +101,8 @@
 .twitter-feed {
     li {
         .column(4);
+        padding-left: 0;
+        padding-right: 10px;
     }
 }
 
@@ -253,7 +255,7 @@
 .four-cols{
     //.row-flush();
     .col{
-        .column(3); 
+        .column(3);
     }
 }
 .three-nine-cols {
@@ -327,7 +329,7 @@
 }
 
 
-/** 
+/**
  *$Half-width double item
  */
  .half-double{
@@ -349,7 +351,7 @@
 
     .single{
         .column(4);
-        
+
         .image img{
             width:auto;
         }
@@ -422,7 +424,7 @@
  */
 
 .teaser-image {
-    
+
 }
 
 /**
@@ -438,12 +440,12 @@
  */
 
 .gallery {
-    ul{
+    ul.row {
         .row-flush();
     }
     li {
         float:left;
-    
+
         &.portrait{
             .column(6);
         }
@@ -497,7 +499,7 @@
 
 .contact {
     li.col {
-        .column(4, @grid-gutter-width, 12); 
+        .column(4, @grid-gutter-width, 12);
         p {
             margin: 0;
         }
